Code clean up. new Integer() replaced for Integer.valueOf()
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@4498 a97e2381-89e5-4abb-bab3-167db6db766c