@@ -281,7 +281,7 @@ public class RichFacesDataTableScrollerTemplate extends VpeAbstractTemplate {
 		}
 		try {
 			num = num.trim();
-			Integer i = new Integer(num);
+			Integer i = Integer.valueOf(num);
 			return i.intValue();
 		} catch (NumberFormatException e) {
 			return 0;
